Measures Against Common Security Issues
-Installed and implemented mongo-express-sanitize to prevent simple
mongo injections through called the module method in express app.use()
-Create an extension for Joi to use sanitize-html imported method
-Create a user Joi schema and validateUser middleware that uses said schema to
validate new instances of registration. Added extensions validate for any
html elements in input fields.
-Added additional styling to error page
-Modified error value passed to error ejs template through error route,
creating default error message if there is none
-Implemented helmet npm package to increase security with HTTP headers.
Configure its contentSecurityPolicy to allow for resources needed/used
by the app, but blocks all others

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -521,3 +521,16 @@ button {
 } 
 
 
+/* Erorr Message Page */
+.error-page-wrapper {
+    background-color: lightcoral;
+    padding: 0px 30px;
+    min-height: 400px;
+}
+
+.error-found-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 50%;
+}
