--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,13 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>ERROR</h1>
-    <h2><%= message %> </h2>
-</body>
-</html>
+<% layout("/layouts/boilerplate.ejs") %>
+    <div class="error-page-wrapper">
+        <header class="header">
+            <div class="header-content">
+                <h1>ERROR</h1>
+            </div>
+        </header>
+        <div class="error-found-box">
+            <p><%= err.message %></p>
+            <p>Sorry.....Can you try again? :(</p>
+        </div>
+    </div>
